@@ -14,8 +14,8 @@
   <trackmax>1000</trackmax>
   <ammo_mass>1</ammo_mass>
   <gfx type="shader" size="20" col_size="16">particles/chakra.frag</gfx>
-  <sound>missile</sound>
-  <sound_hit>bansheeexp</sound_hit>
+  <sound>seeking_chakra</sound>
+  <sound_hit>chakra_explosion</sound_hit>
   <spfx_shield>ChakraS</spfx_shield>
   <spfx_armour>ChakraS</spfx_armour>
   <trail_generator x="-7">sirius_chakra</trail_generator>
