@@ -28,6 +28,7 @@
    * Fixed damage sometimes causing pilots to instantly become undisabled
    * Fixed Sirius ships acquired before 0.11.0 not being able to use flow
    * Fixed Cleansing Flames shader
+   * Gave some flow abilities custom sound effects
    * `srs_ferry`: fixed marker not updating for alternative delivery locations
    * `nelly01`: fixed giving the player twice as much money as needed for an ion cannon
    * `nelly03`: guard against the player changing systems in the middle of mining
